--- a/pages/intro.html
+++ b/pages/intro.html
@@ -14,14 +14,14 @@
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[anke alyn]</dd>
-        <dt>101617</dt>
-        <dd>[101617]</dd>
-        <dt>ab</dt>
-        <dd>[ab]</dd>
+        <dd>anke alyn</dd>
+        <dt>Studentennummer</dt>
+        <dd>101617</dd>
+        <dt>Klasgroep</dt>
+        <dd>AB</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[101617]">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
