Uploaden intro + scenario

--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren.</h2>
 
     <dl class="info">
         <dt>Naam</dt>
@@ -24,7 +24,21 @@
         <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[101617]">Mijn opdracht</a>
     </p>
     
+<div class="Introductie">
+
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>[Over mijn project: een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren ]</p>
+    <p> Een concept waar, leeftijd, ras en geloof niet toe doet. Theater is voor iedereen alsook het opzoeken op een website. </p> 
+   <p>Wat voor de jongere generaties geen probleem zal zijn. Daarin tegen is de website klantvriendelijk en kunnen ook senioren gemakkelijk gebruik maken van de site. 
+    De website kan in <b>meerdere talen </b> vertaald worden. Waardoor het klantenbereik groter wordt en de nadruk op 'iedereen is welkom' gelegd wordt. </p> 
+
+   <p>Het ontwerp van de website moet perfect bij het onderwerp 'theater' passen. Een <b> foto -en videogalerij </b> zijn een must. Of wat gelijkwaardig opgaat is een dia voorstelling. Bezoekers kunnen meerdere foto's tergelijkertijd zien zonder dat dit veel ruimte in beslag neemt. 
+    Daarnaast zijn een <b>interne zoekmachine </b> en een <b>routeplanner  </b> pluspunten. </p>
+
+    <p>Een belangrijk onderdeel van een website zijn de <b> openingsuren </b> of de uren wanneer een theaterstuk bezocht kan worden. Een<b> directe klik </b> naar de <b>agenda </b>waarop alle theaterstukken tevoorschijn komen voor die dag </p>
+    <p>Om de functionaliteit tot een hoger niveau te tillen kan de klant <b>telefonisch contact </b> op te nemen door slechts een klik op de knop. Uiteraard zit deze knop alleen op de smartphone versie. Maar daarin tegen kunt op u op elk toestel de <b> 'klik en mail' </b> toest gebruiken. Door één klik kunnen bezoekers direct een email versturen. Wat het voor de iets oudere leeftijdcategorie gemakkelijker maakt. 
+    Tot slot kunt u op de website direct je mening, ervaringen en foto's delen. De bezoeker kan gebruik maken van sterren maar ook van <b>sociale media. </b> Zoals: Twitter, Instagram, Facebook en Pinterst. </p>
+    </div>
+
 </body>
 </html>
