--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,16 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+    <p> <b> Albert </b>, 71 jaar gepensioneerd dierenarts, gaat samen met zijn 64-jarige vrouw wekelijks een theaterstuk gaan bekijken. 
+        Dit is al jarenlang een traditie in de familie. Nu er websites en internet bestaan kijken het koppel samen met hun kinderen en 
+        kleinkinderen welk theaterstuk ze het liefst zouden gaan bekijken. Op de site is er voor iedere leeftijd wat wils. </p>
+    <p> <b>Chris</b>, 58 jaar zelfstandig ondernemer, runt nog op de dag van vandaag zijn eigen bedrijf.  Als ondernemer in de decor -en standenbouwer sector
+         kan hij heel kritisch zijn als hij naar een theaterstuk gaat gaan kijken. Om de verschillende theaterzalen van België te gaan bekijken gebruikt
+         hij het platform voor senioren. Daarop kan hij perfect de locatie terugvinden aan de hand van een kaart. </p>
+     <p> <b> Paula</b>, 67 jaar gepensioneerd actrice, geniet van een dagje uit met als eindactiviteit een bezoekje te brengen 
+        aan de schouwburg. Ze gebruikt daarvoor de seniorensite die alle handige informatie toelicht.  </p>
+    <p> <b>Krista </b>, 50 jaar mama van twee kinderen en leerkracht Nederlands in het secundair onderwijs, heeft 
+       een aanleg voor alles wat met taal te maken heeft. Van toen ze kind was, keek ze al in boeken. Ze studeerde taal -en letterkunde 
+        gedurende een bachelor periode. Haar hobby is vooral naar toneelvoorstellingen kijken, wat direct voor het hele gezin een uitstap is. </p>
 </body>
 </html>
