--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,62 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    
+    <table> 
+    <tr> 
+        <th> Positief</th>
+        <th> Negatief</th>
+    </tr>
+    <tr>
+        <td>Bij het openen van de pagina verschijnt er een chatvenstertje die directe hulp aanbiedt, bij problemen. </td>
+        <td>De pixels zijn zichtbaar op de foto's </td>
+    </tr>
+    <tr>
+        <td> Het logo staat centraal en is direct herkenbaar. </td>
+        <td>Mijn eerste indruk linkt niet met de doelgroep senioren. </td>
+    </tr>
+    <tr>
+        <td>Er zijn snelle en opvallende functies zichtbaar om contact op te nemen. </td>
+        <td>Er is een knop die meegaat met de pagina en die je direct naar boven mee neemt als je daarop drukt. Jammer genoeg is de pagina kort en is deze functie overbodig en storend. </td>
+    </tr>
+    <tr>
+        <td>De recensies zijn zichtbaar. Deze kunnen je helpen in de keuze van welk theaterstuk je wilt gaan bekijken. </td>
+        <td>Het doelpubliek is bestemd voor grote groepen. Het moet ook mogelijk/ haalbaar zijn voor kleinere groepen. </td>
+    </tr>
+    <tr> 
+            <td> Er zijn diverse thema's of onderwerpen. Er is voor iedereen wat wils. </td>
+            <td> Er zijn veel resultaten. Het is niet duidelijk welke er bv. het populairst is of het duurst is. Je kan niet filteren.</td>
+    </tr>
+    <tr> 
+            <td> Er is een duidelijke knop om direct te boeken. </td>
+            <td> Er bevindt zich geen kaart/ route om een bepaald theater te vinden.</td>
+    </tr>
+    <tr> 
+            <td> Er is een overzicht van de stappen die de klant moet volgen om tot een correcte boeking te komen. </td>
+    </tr>
+    <tr> 
+            <td>  Vooraleer u boekt, kunt u enkele fragmenten van de artiesten bekijken. </td>
+    </tr>
+    <tr> 
+            <td>  Je kan je registreren op de site. Waardoor je op de hoogte gehouden wordt door de nieuwsbrieven. </td>
+    </tr>
+    <tr> 
+            <td>Je kan naar een theaterstuk gaan kijken op veel verschillende locaties.   </td>
+    </tr>
+    <tr> 
+            <td>  Als je niet overtuigd bent van je keuze, kan je voorlopig je zoekopdracht bewaren.</td>
+    </tr>
+    <tr> 
+            <td> Er is een mogelijkheid om een app te downloaden.  </td>
+    </tr>
+    <tr> 
+            <td> Er zijn veel theaterstukken per dag. Er is een ruime keuze. </td>
+    </tr>
+    <tr> 
+        <td> Je kan zelf een activiteit organiseren.   </td>
+    </tr>
+    <tr> 
+        <td> Je kan met een zoekfunctie gemakkelijk theaters in de buurt vinden.  </td>
+    </tr>
+    </table>
 </body>
 </html>
