--- a/pages/intro.html
+++ b/pages/intro.html
@@ -27,17 +27,18 @@
 <div class="Introductie">
 
     <h1>Introductie</h1>
-    <p>[Over mijn project: een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren ]</p>
-    <p> Een concept waar, leeftijd, ras en geloof niet toe doet. Theater is voor iedereen alsook het opzoeken op een website. </p> 
-   <p>Wat voor de jongere generaties geen probleem zal zijn. Daarin tegen is de website klantvriendelijk en kunnen ook senioren gemakkelijk gebruik maken van de site. 
-    De website kan in <b>meerdere talen </b> vertaald worden. Waardoor het klantenbereik groter wordt en de nadruk op 'iedereen is welkom' gelegd wordt. </p> 
+    <p>[Over mijn project: een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren ]<p/> 
+   <p> Een concept waar, leeftijd, ras en geloof niet toe doet. Theater is voor iedereen alsook het opzoeken op een website. <br/>
+    Wat voor de jongere generaties geen probleem zal zijn. Daarin tegen is de website klantvriendelijk en kunnen ook <br/> senioren gemakkelijk gebruik maken van de site. 
+    De website kan in <b>meerdere talen </b> vertaald worden.<br/>  Waardoor het klantenbereik groter wordt en de nadruk op 'iedereen is welkom' gelegd wordt. </p> 
 
-   <p>Het ontwerp van de website moet perfect bij het onderwerp 'theater' passen. Een <b> foto -en videogalerij </b> zijn een must. Of wat gelijkwaardig opgaat is een dia voorstelling. Bezoekers kunnen meerdere foto's tergelijkertijd zien zonder dat dit veel ruimte in beslag neemt. 
+   <p>Het ontwerp van de website moet perfect bij het onderwerp 'theater' passen. Een <b> foto -en videogalerij </b> zijn een must. <br/> Of wat gelijkwaardig opgaat is een dia voorstelling. Bezoekers kunnen meerdere foto's tergelijkertijd zien zonder dat <br/>
+    dit veel ruimte in beslag neemt. 
     Daarnaast zijn een <b>interne zoekmachine </b> en een <b>routeplanner  </b> pluspunten. </p>
 
-    <p>Een belangrijk onderdeel van een website zijn de <b> openingsuren </b> of de uren wanneer een theaterstuk bezocht kan worden. Een<b> directe klik </b> naar de <b>agenda </b>waarop alle theaterstukken tevoorschijn komen voor die dag </p>
-    <p>Om de functionaliteit tot een hoger niveau te tillen kan de klant <b>telefonisch contact </b> op te nemen door slechts een klik op de knop. Uiteraard zit deze knop alleen op de smartphone versie. Maar daarin tegen kunt op u op elk toestel de <b> 'klik en mail' </b> toest gebruiken. Door één klik kunnen bezoekers direct een email versturen. Wat het voor de iets oudere leeftijdcategorie gemakkelijker maakt. 
-    Tot slot kunt u op de website direct je mening, ervaringen en foto's delen. De bezoeker kan gebruik maken van sterren maar ook van <b>sociale media. </b> Zoals: Twitter, Instagram, Facebook en Pinterst. </p>
+    <p>Een belangrijk onderdeel van een website zijn de <b> openingsuren </b> of de uren wanneer een theaterstuk bezocht kan worden. <br/> Een<b> directe klik </b> naar de <b>agenda </b>waarop alle theaterstukken tevoorschijn komen voor die dag.
+    <br/> Om de functionaliteit tot een hoger niveau te tillen kan de klant <b>telefonisch contact </b> op te nemen door slechts een <br/> klik op de knop. Uiteraard zit deze knop alleen op de smartphone versie. Maar daarin tegen kunt op u op elk toestel de <br/> <b> 'klik en mail' </b> toest gebruiken. Door één klik kunnen bezoekers direct een email versturen. Wat het voor de iets oudere <br/> leeftijdcategorie gemakkelijker maakt. 
+    Tot slot kunt u op de website direct je mening, ervaringen en foto's delen. <br/> De bezoeker kan gebruik maken van sterren maar ook van <b>sociale media. </b> Zoals: Twitter, Instagram, Facebook en Pinterst. </p>
     </div>
 
 </body>
