--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
+    <form action="http://www.example.com/login.php"> <p>Username:
+        <input type="text" name="username" size="15"
+          maxlength="30" />
+     </p> <p>Password:
+        <input type="password" name="password" size="15"
+          maxlength="30" />
+    </p> </form>
+    <form action="http://www.example.org/search.php"> <p>Search:</p>
+        <input type="search" name="search"
+            placeholder="Enter keyword" />
+          <input type="submit" value="Search" />
+    </form>
+    <iframe
+    width="450"
+    height="350"
+    src="http://maps.google.co.uk/maps?q=moma+new+york
+    &amp;output=embed">
+  </iframe>
 </body>
 </html>
