--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -28,5 +28,11 @@
     src="http://maps.google.co.uk/maps?q=moma+new+york
     &amp;output=embed">
   </iframe>
+  <address>
+    <p><a href="mailto:homer@example.org">
+  info@theatergroep.be</a></p>
+  </address>
+
+  <a href="mailto:info@theatergroep.be">Klik en mail! </a>
 </body>
 </html>
