--- a/pages/intro.html
+++ b/pages/intro.html
@@ -27,7 +27,7 @@
 <div class="Introductie">
 
     <h1>Introductie</h1>
-    <p>[Over mijn project: een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren ]<p/> 
+    <p>[Over mijn project: een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren ]<p/> <hr/>
    <p> Een concept waar, leeftijd, ras en geloof niet toe doet. Theater is voor iedereen alsook het opzoeken op een website. <br/>
     Wat voor de jongere generaties geen probleem zal zijn. Daarin tegen is de website klantvriendelijk en kunnen ook <br/> senioren gemakkelijk gebruik maken van de site. 
     De website kan in <b>meerdere talen </b> vertaald worden.<br/>  Waardoor het klantenbereik groter wordt en de nadruk op 'iedereen is welkom' gelegd wordt. </p> 
