--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
-    <form action="http://www.example.com/login.php"> <p>Username:
+    <form action="http://www.example.com/login.php"> <p>Gebruikersnaam:
         <input type="text" name="username" size="15"
           maxlength="30" />
-     </p> <p>Password:
+     </p> <p>Wachtwoord:
         <input type="password" name="password" size="15"
           maxlength="30" />
     </p> </form>
@@ -33,6 +33,11 @@
   info@theatergroep.be</a></p>
   </address>
 
+  <FORM METHOD="post" ACTION="bestemming">
+    <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
+  </FORM>
+
   <a href="mailto:info@theatergroep.be">Klik en mail! </a>
+
 </body>
 </html>
