--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
-    <table> 
+    <table width="900" cellpadding="10" cellspacing="10"> 
     <tr> 
         <th> Positief</th>
         <th> Negatief</th>
