--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <h1>Digital Styleguide</h1>
+    <nav>
+      <a href="#" class="one"><i class="fa fa-commenting-o" aria-hidden="true"></i> Categorie</a> 
+      <a href="#" class="two"><i class="fa fa-user" aria-hidden="true"></i> Kalender</a>
+      <a href="#" class="three"><i class="fa fa-cog" aria-hidden="true"></i> Stad/ gemeente </a>
+      <a href="#" class="four"><i class="fa fa-sign-out" aria-hidden="true"></i> Contact</a>
+      <a href="#" class=" four"><i class="fa fa-sign-out" aria-hidden="true"></i> Aanmelden</a>
+  </nav>
     <form action="http://www.example.com/login.php"> <p>Gebruikersnaam:
         <input type="text" name="username" size="15"
           maxlength="30" />
@@ -27,17 +34,19 @@
     height="350"
     src="http://maps.google.co.uk/maps?q=moma+new+york
     &amp;output=embed">
-  </iframe>
-  <address>
-    <p><a href="mailto:homer@example.org">
-  info@theatergroep.be</a></p>
-  </address>
+    </iframe>
+    <address>
+      <p><a href="mailto:homer@example.org">
+    info@theatergroep.be</a></p>
+    </address>
+    <FORM METHOD="post" ACTION="bestemming">
+      <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
+    </FORM>
+    <a href="mailto:info@theatergroep.be">Klik en mail! </a>
+    
 
-  <FORM METHOD="post" ACTION="bestemming">
-    <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
-  </FORM>
 
-  <a href="mailto:info@theatergroep.be">Klik en mail! </a>
+
 
 </body>
 </html>
