--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -7,16 +7,46 @@
     <title>Digital Styleguide - Eindopdracht NMD-I</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
+    <link rel="stylesheet" href="css/styleguide.css">
 </head>
 <body>
     <h1>Digital Styleguide</h1>
     <nav>
+      <br/>
+      <br/>
+<!-- logo -->
+        <h4> LOGO </h4>
+        <hr/> 
+        <br/> 
+        <img src="images/logo.png" width="200" height="100" /> 
+        <br/> 
+<!-- onderdelen -->
+      <h4> ONDERDELEN </h4>
+      <hr/> 
+      <a href="link.htm" class="onderdeeltjes">menu-item</a>
       <a href="#" class="one"><i class="fa fa-commenting-o" aria-hidden="true"></i> Categorie</a> 
       <a href="#" class="two"><i class="fa fa-user" aria-hidden="true"></i> Kalender</a>
       <a href="#" class="three"><i class="fa fa-cog" aria-hidden="true"></i> Stad/ gemeente </a>
       <a href="#" class="four"><i class="fa fa-sign-out" aria-hidden="true"></i> Contact</a>
       <a href="#" class=" four"><i class="fa fa-sign-out" aria-hidden="true"></i> Aanmelden</a>
+   
   </nav>
+       <br/> 
+<!-- titels-->
+    <h4>TYPOGRAFIE</h4>
+    <hr/> 
+    <h2> Dit is een voorbeeld van een titel</h2>
+    <h3> Dit is een voorbeeld van een ondertitel</h3>
+    <p> Dit is een voorbeeld van een stuk tekst. </p> <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p><!-- kleuren-->
+    <br/> 
+    <!--kleurenpallet-->
+    <h4> MOGELIJKE KLEUREN </h4>  
+    <hr/> 
+    <img src="images/Kleurenpallet.png" width="400"/> 
+    <br/> 
+<!-- gebruikersnaam en wachtwoord-->
+    <h4> AANMELDEN </h4>
+    <hr/>
     <form action="http://www.example.com/login.php"> <p>Gebruikersnaam:
         <input type="text" name="username" size="15"
           maxlength="30" />
@@ -24,28 +54,38 @@
         <input type="password" name="password" size="15"
           maxlength="30" />
     </p> </form>
+    <br/> 
+<!-- zoeken-->
+    <h4> ZOEKEN</h4>
+    <hr/>
     <form action="http://www.example.org/search.php"> <p>Search:</p>
         <input type="search" name="search"
             placeholder="Enter keyword" />
           <input type="submit" value="Search" />
-    </form>
+      </form>
+      <br/> 
+<!-- maps-->
+      <h4> LOCATIE/ ROUTE </h4>
+      <hr/>
     <iframe
-    width="450"
-    height="350"
-    src="http://maps.google.co.uk/maps?q=moma+new+york
-    &amp;output=embed">
-    </iframe>
-    <address>
-      <p><a href="mailto:homer@example.org">
-    info@theatergroep.be</a></p>
-    </address>
-    <FORM METHOD="post" ACTION="bestemming">
-      <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
-    </FORM>
+      width="450"
+      height="350"
+      src="http://maps.google.co.uk/maps?q=moma+new+york
+      &amp;output=embed">
+      </iframe>
+      <address>
+        <p><a href="mailto:homer@example.org">
+      info@theatergroep.be</a></p>
+      </address>
+      <FORM METHOD="post" ACTION="bestemming">
+        <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
+      </FORM>
+      <br/> 
+<!-- Theatergroep.be-->
+      <h4>DIRECT EEN MAIL VERSTUREN </h4> 
+      <hr/>
     <a href="mailto:info@theatergroep.be">Klik en mail! </a>
-    
-
-
+    <br/> 
 
 
 </body>
