--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
     <link rel="stylesheet" href="css/styleguide.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
+    
 </head>
 <body>
     <h1>Digital Styleguide</h1>
