--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -41,7 +41,7 @@
     <h3> Dit is een voorbeeld van een ondertitel</h3>
     <p> Dit is een voorbeeld van een stuk tekst. </p> <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p><!-- kleuren-->
     <br/> 
-    <!--kleurenpallet-->
+<!--kleurenpallet-->
     <h4> MOGELIJKE KLEUREN </h4>  
     <hr/> 
     <img src="images/Kleurenpallet.png" width="400"/> 
@@ -49,10 +49,12 @@
 <!-- gebruikersnaam en wachtwoord-->
     <h4> AANMELDEN </h4>
     <hr/>
+    <img src="images/user.png" width="40"/> 
     <form action="http://www.example.com/login.php"> <p>Gebruikersnaam:
         <input type="text" name="username" size="15"
           maxlength="30" />
-     </p> <p>Wachtwoord:
+          <img src="images/lock.png" width="40"/> 
+        </p><p>Wachtwoord:
         <input type="password" name="password" size="15"
           maxlength="30" />
     </p> </form>
@@ -60,6 +62,7 @@
 <!-- zoeken-->
     <h4> ZOEKEN</h4>
     <hr/>
+    <img src="images/zoeken.png" width="40"/> 
     <form action="http://www.example.org/search.php"> <p>Search:</p>
         <input type="search" name="search"
             placeholder="Enter keyword" />
@@ -79,6 +82,7 @@
         <p><a href="mailto:homer@example.org">
       info@theatergroep.be</a></p>
       </address>
+<!-- Ontvang de nieuwsbrief-->
       <FORM METHOD="post" ACTION="bestemming">
         <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
       </FORM>
