--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -12,7 +12,7 @@
     
 </head>
 <body>
-    <h1>Digital Styleguide</h1>
+    <h1>Digital Styleguide TEST</h1>
     <nav>
       <br/>
       <br/>
@@ -92,7 +92,11 @@
       <hr/>
     <a href="mailto:info@theatergroep.be">Klik en mail! </a>
     <br/> 
+<!--Sociale media-->
 
-
+<!-- Rescentie -->
+      <h4> RESCENTIE</h4>
+      <hr/> 
+      <img src="images/sterren.gif" width="40"/> 
 </body>
 </html>
