--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Digital Styleguide - Eindopdracht NMD-I</title>
+    <link href="https://fonts.googleapis.com/css?family=Karla:700" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
     <link rel="stylesheet" href="css/styleguide.css">
@@ -26,11 +27,11 @@
       <h4> ONDERDELEN </h4>
       <hr/> 
       <a href="link.htm" class="onderdeeltjes">menu-item</a>
-      <a href="#" class="one"><i class="fa fa-commenting-o" aria-hidden="true"></i> Categorie</a> 
-      <a href="#" class="two"><i class="fa fa-user" aria-hidden="true"></i> Kalender</a>
-      <a href="#" class="three"><i class="fa fa-cog" aria-hidden="true"></i> Stad/ gemeente </a>
-      <a href="#" class="four"><i class="fa fa-sign-out" aria-hidden="true"></i> Contact</a>
-      <a href="#" class=" four"><i class="fa fa-sign-out" aria-hidden="true"></i> Aanmelden</a>
+      <a href="#" class="one"><i class="fa fa-commenting-o" aria-hidden="true"></i> CATEGORIE</a> 
+      <a href="#" class="two"><i class="fa fa-user" aria-hidden="true"></i> KALENDER</a>
+      <a href="#" class="three"><i class="fa fa-cog" aria-hidden="true"></i> STAD/ GEMEENTE</a>
+      <a href="#" class="four"><i class="fa fa-sign-out" aria-hidden="true"></i> CONTACT</a>
+      <a href="#" class=" four"><i class="fa fa-sign-out" aria-hidden="true"></i> AANMELDEN</a>
    
   </nav>
        <br/> 
