--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/pages.css">
     <link rel="stylesheet" href="css/styleguide.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Allerta+Stencil" />
+    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Karla:700" rel="stylesheet">
     
 </head>
 <body>
-    <h1>Digital Styleguide TEST</h1>
+    <h1>Digital Styleguide</h1>
     <nav>
       <br/>
       <br/>
@@ -23,43 +23,51 @@
         <br/> 
         <img src="images/logo.png" width="200" height="100" /> 
         <br/> 
+        <br/> 
 <!-- onderdelen -->
       <h4> ONDERDELEN </h4>
       <hr/> 
-      <a href="link.htm" class="onderdeeltjes">menu-item</a>
       <a href="#" class="one"><i class="fa fa-commenting-o" aria-hidden="true"></i> CATEGORIE</a> 
       <a href="#" class="two"><i class="fa fa-user" aria-hidden="true"></i> KALENDER</a>
-      <a href="#" class="three"><i class="fa fa-cog" aria-hidden="true"></i> STAD/ GEMEENTE</a>
+      <a href="#" class="three"><i class="fa fa-cog" aria-hidden="true"></i> STAD</a>
       <a href="#" class="four"><i class="fa fa-sign-out" aria-hidden="true"></i> CONTACT</a>
       <a href="#" class=" four"><i class="fa fa-sign-out" aria-hidden="true"></i> AANMELDEN</a>
-   
-  </nav>
-       <br/> 
+      <br/> 
+      <br/> 
+      <br/> 
+    </nav>
 <!-- titels-->
     <h4>TYPOGRAFIE</h4>
     <hr/> 
     <h2> Dit is een voorbeeld van een titel</h2>
     <h3> Dit is een voorbeeld van een ondertitel</h3>
-    <p> Dit is een voorbeeld van een stuk tekst. </p> <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p><!-- kleuren-->
+    <p> Dit is een voorbeeld van een stuk tekst. </p>
     <br/> 
 <!--kleurenpallet-->
     <h4> MOGELIJKE KLEUREN </h4>  
     <hr/> 
     <img src="images/Kleurenpallet.png" width="400"/> 
     <br/> 
+    <!-- Rescentie -->
+    <h4> RECENTIE</h4>
+    <hr/> 
+    <img src="images/sterren.gif" width="300"/> 
 <!-- gebruikersnaam en wachtwoord-->
+<div id="AANMELDEN">
     <h4> AANMELDEN </h4>
     <hr/>
     <img src="images/user.png" width="40"/> 
-    <form action="http://www.example.com/login.php"> <p>Gebruikersnaam:
+    <img src="images/lock.png" width="40"/> 
+    <form action="http://www.example.com/login.php"> 
+      <p>Gebruikersnaam:
         <input type="text" name="username" size="15"
           maxlength="30" />
-          <img src="images/lock.png" width="40"/> 
         </p><p>Wachtwoord:
         <input type="password" name="password" size="15"
           maxlength="30" />
     </p> </form>
     <br/> 
+  </div>
 <!-- zoeken-->
     <h4> ZOEKEN</h4>
     <hr/>
@@ -95,9 +103,24 @@
     <br/> 
 <!--Sociale media-->
 
-<!-- Rescentie -->
-      <h4> RESCENTIE</h4>
-      <hr/> 
-      <img src="images/sterren.gif" width="40"/> 
+
+<!--Downloaden-->
+
+
+<!--Contact-->
+
+
+<!--Foto's-->
+
+
+<!-- Koop knop-->
+  <FORM METHOD="post" ACTION="bestemming">
+    <BUTTON TYPE="reset"><IMG SRC="knop.png" ..>Koop je ticket</BUTTON>
+  </FORM>
+  <FORM METHOD="post" ACTION="bestemming">
+      <BUTTON TYPE="reset"><IMG SRC="knopsoldout.png" ..>Tickets zijn uitverkocht</BUTTON>
+    </FORM>
+  <br/> 
+
 </body>
 </html>
