--- a/pages/intro.html
+++ b/pages/intro.html
@@ -28,11 +28,13 @@
 
     <h1>Introductie</h1>
     <p>[Over mijn project: een website om theaterstukken te bezichtigen met als belangrijkste doelgroep senioren ]<p/> <hr/>
-   <p> Een concept waar, leeftijd, ras en geloof niet toe doet. Theater is voor iedereen alsook het opzoeken op een website. <br/>
-    Wat voor de jongere generaties geen probleem zal zijn. Daarin tegen is de website klantvriendelijk en kunnen ook <br/> senioren gemakkelijk gebruik maken van de site. 
+   <p> Een concept waar alle leeftijden hun favoriete theaterstuk vinden. Theater is voor iedereen alsook het opzoeken op een website. <br/>
+    Wat voor de jongere generaties geen probleem zal zijn.In tegendeel tot de iets oudere generatie. 
+    Daarom kies ik voor een eenvoudige lay-out en een website die gemakkelijk toegankelijk is voor elke leeftijd.  
     De website kan in <b>meerdere talen </b> vertaald worden.<br/>  Waardoor het klantenbereik groter wordt en de nadruk op 'iedereen is welkom' gelegd wordt. </p> 
 
-   <p>Het ontwerp van de website moet perfect bij het onderwerp 'theater' passen. Een <b> foto -en videogalerij </b> zijn een must. <br/> Of wat gelijkwaardig opgaat is een dia voorstelling. Bezoekers kunnen meerdere foto's tergelijkertijd zien zonder dat <br/>
+   <p>Het ontwerp van de website moet perfect bij het onderwerp 'theater' passen. Een <b> foto -en videogalerij </b> zijn een must. <br/> 
+    Of wat gelijkwaardig opgaat is een dia voorstelling. Bezoekers kunnen meerdere foto's tergelijkertijd zien zonder dat <br/>
     dit veel ruimte in beslag neemt. 
     Daarnaast zijn een <b>interne zoekmachine </b> en een <b>routeplanner  </b> pluspunten. </p>
 
