--- a/pages/styleguide.html
+++ b/pages/styleguide.html
@@ -39,25 +39,34 @@
 <!-- titels-->
     <h4>TYPOGRAFIE</h4>
     <hr/> 
-    <h2> Dit is een voorbeeld van een titel</h2>
-    <h3> Dit is een voorbeeld van een ondertitel</h3>
+    <h2> Dit is een voorbeeld van een titel.</h2>
+    <p> Karla bold, 20pt </p>
+    <br/>
+    <h3> Dit is een voorbeeld van een ondertitel.</h3>
+    <p> Karla regular, 18pt </p>
+    <br/>
     <p> Dit is een voorbeeld van een stuk tekst. </p>
+    <p> Helvetica nue, 12pt</p>
     <br/> 
 <!--kleurenpallet-->
     <h4> MOGELIJKE KLEUREN </h4>  
     <hr/> 
     <img src="images/Kleurenpallet.png" width="400"/> 
     <br/> 
-    <!-- Rescentie -->
+<!-- Rescentie -->
     <h4> RECENTIE</h4>
     <hr/> 
     <img src="images/sterren.gif" width="250"/> 
+<!--Foto's-->
+<h4> FOTO- EN VIDEO GALERIJ </h4>
+<hr/>
+<img src="images/ONE.jpg" height="250"/> 
+<img src="images/ONES.jpg" height="250"/>
+<img src="images/ONESS.jpg" height="250"/>
+<br/>
 <!-- gebruikersnaam en wachtwoord-->
-<div id="AANMELDEN">
     <h4> AANMELDEN </h4>
     <hr/>
-    <img src="images/user.png" width="40"/> 
-    <img src="images/lock.png" width="40"/> 
     <form action="http://www.example.com/login.php"> 
       <p>Gebruikersnaam:
         <input type="text" name="username" size="15"
@@ -67,31 +76,18 @@
           maxlength="30" />
     </p> </form>
     <br/> 
-  </div>
 <!-- zoeken-->
     <h4> ZOEKEN</h4>
     <hr/>
-    <img src="images/zoeken.png" width="40"/> 
-    <form action="http://www.example.org/search.php"> <p>Search:</p>
+    <form action="http://www.example.org/search.php"> <p>Zoeken:</p>
         <input type="search" name="search"
             placeholder="Enter keyword" />
           <input type="submit" value="Search" />
       </form>
       <br/> 
-<!-- maps-->
-      <h4> LOCATIE/ ROUTE </h4>
-      <hr/>
-    <iframe
-      width="450"
-      height="350"
-      src="http://maps.google.co.uk/maps?q=moma+new+york
-      &amp;output=embed">
-      </iframe>
-      <address>
-        <p><a href="mailto:homer@example.org">
-      info@theatergroep.be</a></p>
-      </address>
 <!-- Ontvang de nieuwsbrief-->
+      <h4>NIEUWSBRIEF ONTVANGEN</h4>
+      <hr/> 
       <FORM METHOD="post" ACTION="bestemming">
         <BUTTON TYPE="reset"><IMG SRC="mail.png" ..> Ontvang de nieuwsbrief</BUTTON>
       </FORM>
@@ -101,26 +97,43 @@
       <hr/>
     <a href="mailto:info@theatergroep.be">Klik en mail! </a>
     <br/> 
-<!--Sociale media-->
-
-
+    <br/> 
 <!--Downloaden-->
-
-
-<!--Contact-->
-
-
-<!--Foto's-->
-
-
-<!-- Koop knop-->
-  <FORM METHOD="post" ACTION="bestemming">
-    <BUTTON TYPE="reset"><IMG SRC="knop.png" ..>Koop je ticket</BUTTON>
-  </FORM>
-  <FORM METHOD="post" ACTION="bestemming">
-      <BUTTON TYPE="reset"><IMG SRC="knopsoldout.png" ..>Tickets zijn uitverkocht</BUTTON>
-    </FORM>
+  <h4> DOWNLOADEN</h4>
+  <hr/> 
+    <img src="images/download.png" height="100"/>
   <br/> 
+  <br/> 
+<!-- Koop knop-->
+<h4> BESTELLEN</h4>
+<hr/> 
+      <img src="images/knop.png" height="100"/>
+      <p>Er zijn nog tickets beschikbaar</p>
+      <img src="images/koopsoldout.png" height="100"/>
+      <p>Er zijn geen tickets beschikbaar</p>
+  <br/> 
+  <!--Contact-->
+  <h4>CONTACT</h4>
+  <hr/>
+  <address>
+      <p><a href="mailto:homer@example.org">
+    info@theatergroep.be</a></p>
+    </address>
+    <address>
+        <p><a href="0470 10 11 12">
+     0470 10 11 12</p>
+      </address>
+  <br/>
+<!-- maps-->
+  <h4>LOCATIE/ ROUTE</h4>
+  <hr/>
+  <iframe
+  width="450"
+  height="350"
+  src="http://maps.google.co.uk/maps?q=moma+new+york
+  &amp;output=embed">
+  </iframe>
+
 
 </body>
 </html>
